<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.bazaarvoice.priam</groupId>
        <artifactId>priam-parent</artifactId>
        <version>1.19-SNAPSHOT</version>
        <relativePath>../parent/pom.xml</relativePath>
    </parent>

    <artifactId>priam-core</artifactId>
    <packaging>jar</packaging>

    <name>Priam Service</name>

    <scm>
        <connection>scm:git:git@github.com:bazaarvoice/Priam.git</connection>
        <url>scm:git:git@github.com:bazaarvoice/Priam.git</url>
        <developerConnection>scm:git:git@github.com:bazaarvoice/Priam.git</developerConnection>
        <tag>priam-complete-1.1</tag>
    </scm>

    <properties>
        <exec.Xms>256m</exec.Xms>
        <exec.Xmx>512m</exec.Xmx>
        <exec.MaxPermSize>256m</exec.MaxPermSize>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.bazaarvoice.badger</groupId>
            <artifactId>badger-core</artifactId>
        </dependency>
        <dependency>
            <groupId>com.bazaarvoice.curator</groupId>
            <artifactId>dropwizard</artifactId>
        </dependency>
        <dependency>
            <groupId>com.bazaarvoice.ostrich</groupId>
            <artifactId>ostrich-core</artifactId>
        </dependency>
        <dependency>
            <groupId>com.bazaarvoice.ostrich.zookeeper</groupId>
            <artifactId>ostrich-zookeeper-registry</artifactId>
        </dependency>
        <dependency>
            <groupId>com.yammer.dropwizard</groupId>
            <artifactId>dropwizard-core</artifactId>
        </dependency>
        <dependency>
            <groupId>com.yammer.dropwizard</groupId>
            <artifactId>dropwizard-client</artifactId>
        </dependency>
        <dependency>
            <groupId>commons-lang</groupId>
            <artifactId>commons-lang</artifactId>
        </dependency>
        <dependency>
            <groupId>commons-collections</groupId>
            <artifactId>commons-collections</artifactId>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
        </dependency>
        <dependency>
            <groupId>com.amazonaws</groupId>
            <artifactId>aws-java-sdk</artifactId>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
        </dependency>
        <dependency>
            <groupId>com.google.inject</groupId>
            <artifactId>guice</artifactId>
        </dependency>
        <dependency>
            <groupId>org.quartz-scheduler</groupId>
            <artifactId>quartz</artifactId>
        </dependency>
        <dependency>
            <groupId>org.xerial.snappy</groupId>
            <artifactId>snappy-java</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.cassandra</groupId>
            <artifactId>cassandra-all</artifactId>
        </dependency>
        <dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time</artifactId>
        </dependency>
        <dependency>
            <groupId>com.googlecode.jmockit</groupId>
            <artifactId>jmockit</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>xerces</groupId>
            <artifactId>xercesImpl</artifactId>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jcl-over-slf4j</artifactId>
        </dependency>
        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna</artifactId>
        </dependency>
    </dependencies>


    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <configuration>
                    <executable>java</executable>
                    <arguments>
                        <argument>-Xdebug</argument>
                        <argument>-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005</argument>
                        <argument>-Xms${exec.Xms}</argument>
                        <argument>-Xmx${exec.Xmx}</argument>
                        <argument>-XX:MaxPermSize=${exec.MaxPermSize}</argument>
                        <argument>-classpath</argument>
                        <classpath />
                        <argument>com.netflix.priam.dropwizard.PriamService</argument>
                        <argument>server</argument>
                        <argument>src/main/resources/conf/priam.yaml</argument>
                    </arguments>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <configuration>
                    <packagingExcludes>WEB-INF/lib/servlet-api-*.jar, WEB-INF/lib/jetty-*.jar</packagingExcludes>
                    <warName>Priam</warName>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <configuration>
                    <goals>deploy</goals>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <reportOutputDirectory>${project.basedir}</reportOutputDirectory>
                    <destDir>doc</destDir>
                </configuration>
                <executions>
                    <execution>
                        <id>aggregate</id>
                        <goals>
                            <goal>aggregate</goal>
                        </goals>
                        <phase>site</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>
                        -Xms256m -Xmx1024m -XX:MaxPermSize=512m
                        -javaagent:"${settings.localRepository}"/com/googlecode/jmockit/jmockit/0.999.12/jmockit-0.999.12.jar
                    </argLine>
                    <skipTests>${skipTests}</skipTests>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>deploy-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>assemble</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-shade-plugin</artifactId>
                        <configuration>
                            <createDependencyReducedPom>true</createDependencyReducedPom>
                            <shadedArtifactAttached>true</shadedArtifactAttached>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>shade</goal>
                                </goals>
                                <configuration>
                                    <transformers>
                                        <!-- collate the various META-INF/services entries in the JARs instead of overwriting them -->
                                        <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                            <mainClass>com.netflix.priam.dropwizard.PriamService</mainClass>
                                        </transformer>
                                    </transformers>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-jar-plugin</artifactId>
                        <version>2.4</version>
                        <configuration>
                            <archive>
                                <manifest>
                                    <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                                    <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                                </manifest>
                            </archive>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>rpm</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>rpm-maven-plugin</artifactId>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>attached-rpm</goal>
                                </goals>
                                <configuration>
                                    <group>com.netflix.priam</group>
                                    <name>priam</name>
                                </configuration>
                            </execution>
                        </executions>
                        <configuration>
                            <group>BV/Priam</group>
                            <copyright>Other/Proprietary</copyright>
                            <defaultDirmode>755</defaultDirmode>
                            <defaultFilemode>644</defaultFilemode>
                            <defaultUsername>root</defaultUsername>
                            <defaultGroupname>root</defaultGroupname>
                            <mappings>
                                <!-- Main Priam server jar. -->
                                <mapping>
                                    <directory>/usr/share/cassandra/</directory>
                                    <sources>
                                        <source>
                                            <location>${basedir}/target/${project.artifactId}-${project.version}-shaded.jar</location>
                                        </source>
                                        <!-- Create a symbolic link without the version number for use by supervisord. -->
                                        <softlinkSource>
                                            <location>${project.artifactId}-${project.version}-shaded.jar</location>
                                            <destination>${project.artifactId}-shaded.jar</destination>
                                        </softlinkSource>
                                    </sources>
                                </mapping>
                                <!-- Helper jar that gets added to Cassandra's classpath and wraps its main() method. -->
                                <mapping>
                                    <filemode>755</filemode>
                                    <username>cassandra</username>
                                    <groupname>cassandra</groupname>
                                    <directory>/usr/share/cassandra/lib/</directory>
                                    <sources>
                                        <source>
                                            <location>${basedir}/target/${project.artifactId}-${project.version}.jar</location>
                                        </source>
                                    </sources>
                                </mapping>
                            </mappings>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
